# RType

./: ReadMe.md
Game_engine/: CMakeLists.txt  main.cpp
Game_engine/includes/: Component.hpp  Data_Network.hpp  Deserializer.hpp  Entity.hpp  Eventsystem.hpp  Game_engine.hpp  Network.hpp  Rendersystem.hpp  SFML_typedef.hpp  Soundsystem.hpp  config_comp.hpp  enum.hpp
Game_engine/scripts/: exe.sh  my_conan.sh  requirement.sh
Game_engine/src/: Entity.cpp  Game_engine.cpp  config_comp.cpp  create_entity.cpp
Game_engine/src/Component/: Clock_component.cpp  Drawable_component.cpp  Drawable_impl.cpp  Input_component.cpp  Mouse_hitbox_component.cpp  Movement_component.cpp  Sound_component.cpp  Sound_impl.cpp  Text_component.cpp  Text_impl.cpp
Game_engine/src/System/: Eventsystem.cpp  Rendersystem.cpp  Soundsystem.cpp
Game_engine/src/System/Network/: Deserializer.cpp  Network.cpp
docs/: Ennemi_creation.md  Game_Engine.md  Network_protocol.md  Protocole Réseau.odt  Serialization.md
pong/: CMakeLists.txt
pong/includes/server/: Lobby_session.hpp  Room.hpp  Serializer.hpp  Server.hpp  macro.hpp
pong/includes/server/game/: Ball.hpp  Player.hpp
pong/network_pong/: Network.cpp
pong/scripts/: conanfile.txt  my_conan.sh  requirement.sh
pong/src/game/: check_hitbox.cpp  custom_func_button.cpp  custom_func_input.cpp  custom_func_loop.cpp  custom_func_network.cpp  game_running_network.cpp  main.cpp
pong/src/server/: Client.cpp  Clock.cpp  Lobby_session.cpp  Logic.cpp  Room.cpp  Server.cpp
pong/src/server/game/: Player.cpp
r-type/: CMakeLists.txt
r-type/assets/pattern/: Boss_pattern.txt  Boss_state2.txt  Mini_boss1.txt  Mini_zig.txt
r-type/includes/game/: Boss.hpp  Bullet.hpp  Kamikaze.hpp  MiniBoss.hpp  Mob.hpp  Player.hpp  Sound.hpp  TIEHunter.hpp
r-type/includes/server/: Client.hpp  Clock.hpp  Room.hpp  Server.hpp
r-type/network_r-type/: Network.cpp
r-type/scripts/: conanfile.txt  exe.sh
r-type/src/client/: condition_game_loop.cpp  custom_func_button.cpp  custom_func_gameloop.cpp  custom_func_input.cpp  custom_func_network.cpp  custom_func_text.cpp  game_running_network.cpp  interpolation.cpp  main.cpp
r-type/src/server/: Lobby_session.cpp  Logic.cpp  Room.cpp  Serializer.cpp  Server.cpp  main.cpp
r-type/src/server/game_server/: Boss.cpp  Bullet.cpp  Kamikaze.cpp  MiniBoss.cpp  Mob.cpp  Player.cpp  TIEHunter.cpp
